tests/fixtures/errors/call_bad_arg.z
# E0300: call passes an argument the function does not declare.
f: function {a: i64} is {}
main: function is {
    f a: 1 b: 2
}
